# ROS2_ROBOT

./: README.md  作业实施规划.md
ros2_ws/: README.txt  install_deps.sh
ros2_ws/config/: nav2_params.yaml
ros2_ws/launch/: bringup.launch.py  display_robot.launch.py  nav.launch.py  spawn_scene.launch.py
ros2_ws/src/gazebo_scene/: CMakeLists.txt  package.xml
ros2_ws/src/gazebo_scene/launch/: bringup.launch.py  spawn_scene.launch.py
ros2_ws/src/gazebo_scene/worlds/: obstacle_course.world
ros2_ws/src/nav_bringup/: package.xml  setup.py
ros2_ws/src/nav_bringup/config/: nav2_params.yaml
ros2_ws/src/robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/robot_description/config/: display.rviz
ros2_ws/src/robot_description/launch/: display_robot.launch.py
ros2_ws/src/robot_description/urdf/: robot.xacro
ros2_ws/src/slam_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/slam_bringup/config/: cartographer_config.lua
ros2_ws/src/slam_bringup/launch/: slam.launch.py
ros2_ws/urdf/: robot.xacro
